# homework_1

./: API.md  LICENSE  OpenApi.md  READMD.md  README.md
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  routes.rs
client/: Cargo.toml
client/src/: main.rs
shared/: Cargo.toml
shared/src/: question.rs
