[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.8.9"
axum-macros = "0.5.1"
axum-derive-error = "0.1.0"
backtrace = "0.3.76"
bcrypt = "0.19.0"
dotenvy = "0.15.7"
chrono = { version = "0.4.44", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["display"] }
futures = "0.3.32"
header = "0.0.0"
html-escape = "0.2.13"
http = "1.4.0"
http-serde = "2.1.1"
hyper = "1.9.0"
jsonwebtoken = "10.3.0"
mime = "0.3.17"
r2d2 = "0.8.10"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
termcolor = "1.4.1"
time = "0.3.47"
tokio = { version = "1.52", features = ["full"] }
thiserror = "2.0"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

shared = { path = "../shared" }
